fixed layout issues navbar disseapers at 992px

--- a/src/app/modules/main/main-dashboard/main-dashboard.component.scss
+++ b/src/app/modules/main/main-dashboard/main-dashboard.component.scss
@@ -1,5 +1,5 @@
 .container-fluid {
   margin-right: -15px;
   margin-left: -15px;
-  height: 100vh;
+  height: 100%;
 }
